# grafton

./: .gitignore  .syntastic_c_config  .travis.yml  AUTHORS  CMakeLists.txt  Gemfile  Guardfile  LICENSE  Makefile  Makefile.in  README  README.md  configure
script/: build  test_suite_create.rb
src/: config.h.in  grafton.c  main.c
src/data/: uuid.c  uuid.h
test/: check_grafton.h
test/data/: uuid_test.c
wiki/: DESIGN.mkd  GLOSSARY.mkd  HOME.mkd
